--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   </head>
   <body>
     <h1>Weather App Project</h1>
-    <footer>This project was coded by <a href="https://github.com/huxrce">Erica Hu</a></a></footer>
+    <footer>
+      This project was coded by
+      <a href="https://github.com/huxrce" target="_blank">Erica Hu</a>, and is
+      on
+      <a href="https://github.com/huxrce/Weather" target="_blank">GitHub</a> and
+      hosted on
+      <a href="https://weather-app-project-shecodes-plus.netlify.app/"
+        >Netlify</a
+      >
+    </footer>
   </body>
 </html>
