Updated html content and added css file

--- a/index.html
+++ b/index.html
@@ -6,14 +6,32 @@
     <title>Weather App</title>
   </head>
   <body>
-    <h1>Weather App Project</h1>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city..." required />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
+    <main>
+      <div>
+        <h1>Venice</h1>
+        <p>
+          Wednesday 17:37, mostly cloudy
+          <br />
+          Humidity: 94%, Wind: 3km/h
+        </p>
+      </div>
+      <div>☁ 15°</div>
+    </main>
     <footer>
       This project was coded by
-      <a href="https://github.com/huxrce" target="_blank">Erica Hu</a>, and is
-      on
+      <a href="https://github.com/huxrce" target="_blank">Erica Hu</a>,
+      open-sourced on
       <a href="https://github.com/huxrce/Weather" target="_blank">GitHub</a> and
       hosted on
-      <a href="https://weather-app-project-shecodes-plus.netlify.app/"
+      <a
+        href="https://weather-app-project-shecodes-plus.netlify.app/"
+        target="_blank"
         >Netlify</a
       >
     </footer>
