--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="src/styles.css" />
     <title>Weather App</title>
   </head>
   <body>
+    <div class="weather-app">
     <header>
       <form>
         <input type="search" placeholder="Enter a city..." required />
@@ -21,7 +26,8 @@
           Humidity: 94%, Wind: 3km/h
         </p>
       </div>
-      <div>☁ 15°</div>
+      <div>☁ 15°C</div>
+      </div>
     </main>
     <footer>
       This project was coded by
@@ -35,5 +41,6 @@
         >Netlify</a
       >
     </footer>
+    </div>
   </body>
 </html>
