--- a/index.html
+++ b/index.html
@@ -3,44 +3,57 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="src/styles.css" />
     <title>Weather App</title>
   </head>
-  <body>
+  <body class="container">
     <div class="weather-app">
-    <header>
-      <form>
-        <input type="search" placeholder="Enter a city..." required />
-        <input type="submit" value="Search" />
-      </form>
-    </header>
-    <main>
-      <div>
-        <h1>Venice</h1>
-        <p>
-          Wednesday 17:37, mostly cloudy
-          <br />
-          Humidity: 94%, Wind: 3km/h
-        </p>
-      </div>
-      <div>☁ 15°C</div>
-      </div>
-    </main>
-    <footer>
-      This project was coded by
-      <a href="https://github.com/huxrce" target="_blank">Erica Hu</a>,
-      open-sourced on
-      <a href="https://github.com/huxrce/Weather" target="_blank">GitHub</a> and
-      hosted on
-      <a
-        href="https://weather-app-project-shecodes-plus.netlify.app/"
-        target="_blank"
-        >Netlify</a
-      >
-    </footer>
+      <header>
+        <form class="search-form">
+          <input
+            type="search"
+            placeholder="Enter a city..."
+            required
+            class="search-form-input"
+          />
+          <input type="submit" value="Search" class="search-form-button" />
+        </form>
+      </header>
+      <main>
+        <div class="current-weather-data">
+          <div>
+            <h1 class="current-weather-city">Venice</h1>
+            <p class="current-weather-details">
+              Wednesday 17:37, mostly cloudy
+              <br />
+              Humidity: <strong>94%</strong>, Wind: <strong>3km/h</strong>
+            </p>
+          </div>
+          <div class="current-temp-details">
+            <div class="current-temp-icon">☁</div>
+            <div class="current-temp">15</div>
+            <div class="current-temp-unit">°C</div>
+          </div>
+        </div>
+      </main>
+      <footer>
+        This project was coded by
+        <a href="https://github.com/huxrce" target="_blank">Erica Hu</a>,
+        open-sourced on
+        <a href="https://github.com/huxrce/Weather" target="_blank">GitHub</a>
+        and hosted on
+        <a
+          href="https://weather-app-project-shecodes-plus.netlify.app/"
+          target="_blank"
+          >Netlify</a
+        >
+      </footer>
     </div>
   </body>
 </html>
