--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
   <body class="container">
     <div class="weather-app">
       <header>
-        <form class="search-form">
+        <form class="search-form" id="search-form">
           <input
             type="search"
             placeholder="Enter a city..."
             required
             class="search-form-input"
+            id="search-form-input"
           />
           <input type="submit" value="Search" class="search-form-button" />
         </form>
@@ -28,7 +29,7 @@
       <main>
         <div class="current-weather-data">
           <div>
-            <h1 class="current-weather-city">Venice</h1>
+            <h1 class="current-weather-city" id="current-city">Venice</h1>
             <p class="current-weather-details">
               Wednesday 17:37, mostly cloudy
               <br />
@@ -55,5 +56,6 @@
         >
       </footer>
     </div>
+    <script src="src/index.js"></script>
   </body>
 </html>
