--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <main>
         <div class="current-weather-data">
           <div>
-            <h1 class="current-weather-city" id="current-city">Venice</h1>
+            <h1 class="current-weather-city" id="current-city"></h1>
             <p class="current-weather-details">
               Wednesday 17:37, mostly cloudy
               <br />
@@ -39,7 +39,7 @@
           </div>
           <div class="current-temp-details">
             <div class="current-temp-icon">☁</div>
-            <div class="current-temp">15</div>
+            <div class="current-temp" id="current-temp"></div>
             <div class="current-temp-unit">°C</div>
           </div>
         </div>
