--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
           <div>
             <h1 class="current-weather-city" id="current-city"></h1>
             <p class="current-weather-details">
-              Wednesday 17:37, mostly cloudy
+              <span id="time">Wednesday 17:37</span>,
+              <span id="description"></span>
               <br />
-              Humidity: <strong>94%</strong>, Wind: <strong>3km/h</strong>
+              Humidity: <strong id="humidity"></strong>, Wind:
+              <strong id="wind"></strong>
             </p>
           </div>
           <div class="current-temp-details">
