--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </p>
           </div>
           <div class="current-temp-details">
-            <div class="current-temp-icon">☁</div>
+            <div id="icon"></div>
             <div class="current-temp" id="current-temp"></div>
             <div class="current-temp-unit">°C</div>
           </div>
