--- a/index.html
+++ b/index.html
@@ -48,15 +48,17 @@
       </main>
       <footer>
         This project was coded by
-        <a href="https://github.com/huxrce" target="_blank">Erica Hu</a>,
+        <a href="https://github.com/huxrce" target="_blank">Erica Hu</a>, it's
         open-sourced on
-        <a href="https://github.com/huxrce/Weather" target="_blank">GitHub</a>
+        <a href="https://github.com/huxrce/Weather" target="_blank">GitHub</a>,
         and hosted on
         <a
           href="https://weather-app-project-shecodes-plus.netlify.app/"
           target="_blank"
-          >Netlify</a
-        >
+          >Netlify
+        </a>
+        or
+        <a href="https://weather-u2rm.onrender.com">Render</a>
       </footer>
     </div>
     <script src="src/index.js"></script>
