--- a/index.html
+++ b/index.html
@@ -45,48 +45,7 @@
             <div class="current-temp-unit">°C</div>
           </div>
         </div>
-        <div class="weather-forecast">
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Fri</div>
-            <div class="weather-forecast-icon">⛈</div>
-            <div class="weather-forecast-temperature">
-              <div class="forecast-temp max"><strong>15°</strong></div>
-              <div class="forecast-temp min">9°</div>
-            </div>
-          </div>
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Sat</div>
-            <div class="weather-forecast-icon">⛈</div>
-            <div class="weather-forecast-temperature">
-              <div class="forecast-temp max"><strong>15°</strong></div>
-              <div class="forecast-temp min">9°</div>
-            </div>
-          </div>
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Sun</div>
-            <div class="weather-forecast-icon">⛈</div>
-            <div class="weather-forecast-temperature">
-              <div class="forecast-temp max"><strong>15°</strong></div>
-              <div class="forecast-temp min">9°</div>
-            </div>
-          </div>
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Mon</div>
-            <div class="weather-forecast-icon">⛈</div>
-            <div class="weather-forecast-temperature">
-              <div class="forecast-temp max"><strong>15°</strong></div>
-              <div class="forecast-temp min">9°</div>
-            </div>
-          </div>
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Tue</div>
-            <div class="weather-forecast-icon">⛈</div>
-            <div class="weather-forecast-temperature">
-              <div class="forecast-temp max"><strong>15°</strong></div>
-              <div class="forecast-temp min">9°</div>
-            </div>
-          </div>
-        </div>
+        <div class="weather-forecast" id="forecast"></div>
       </main>
       <footer>
         This project was coded by
